--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -51,7 +51,7 @@
                     <li>The point of using Lorem Ipsum </li>
                 </ul>
                 <ul class="list second">
-                    <li>Lorem ipsum dolor sit amet lorem*8</li>
+                    <li>Lorem ipsum dolor sit amet</li>
                     <li>Psium is therefore always free from</li>
                     <li>Comes from a line in section</li>
                     <li>Discovered the undoubtable source</li>
